infrastructure/observability/metrics/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: infra-observability
  labels:
    podsecurity.kubernetes.io/enforce: privileged
    podsecurity.kubernetes.io/warn: baseline
