infrastructure/observability/metrics/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-same-namespace
  namespace: infra-observability
spec:
  endpointSelector: {}
  ingress:
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: infra-observability
  egress:
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: infra-observability
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-grafana-dashboard-download
  namespace: infra-observability
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: grafana
  egress:
  - toFQDNs:
    - matchName: gitlab.com
    - matchName: grafana.com
    - matchName: raw.githubusercontent.com
    - matchName: storage.googleapis.com
    toPorts:
    - ports:
      - port: '443'
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-prometheus-scrape
  namespace: infra-observability
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  egress:
  - toEntities:
    - cluster
  - toCIDR:
    - ${proxyIP}/32
    toPorts:
    - ports:
      - port: '3000'
      - port: '6060'
      - port: '6061'
      - port: '8000'
      - port: '8088'
      - port: '8181'
      - port: '8880'
      - port: '9090'
      - port: '9100'
      - port: '9252'
      - port: '9598'
      - port: '9633'
  - toCIDR:
    - ${backupServerIP}/32
    toPorts:
    - ports:
      - port: '9100'
      - port: '9633'
  # ETCD on Talos is not running as pod, thus the endpoint is the node itself
  - toCIDR:
    - ${singleNodeClusterIP}/32
    toPorts:
    - ports:
      - port: '2381'
